fix jumpy bottom of home page due to varying quotes height

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1459,6 +1459,7 @@ text-decoration: none;
 .carousel.slide {
   max-width: 1200px;
   margin: 2rem auto 0 auto;
+  min-height: 300px;
 }
 
 @media (min-width: 768px) {
